# ZW217_W19_V4.1_yisai

./: 217sw_patch.mk  Build_Environment_Manual.doc  CMakeLists.txt  Makefile  Makefile.modules  Makefile.pid  Makefile.rules  Makefile.third-party  Makefile.verify  UWS6121E.modules  Universe Mobile Phone User guide.doc  Universe手机使用说明.docx  alimbedtls.bat  alimbedtls_debug.bat  app.bat  app_debug.bat  app_main_C_MACRO_INC.h  aud_dev.bat  aud_dev_debug.bat  autotest_device.bat  autotest_device_debug.bat  buildnv.sh  chip_drv.bat  chip_drv_debug.bat  code_make.sh  dc.bat  dc_debug.bat  delTmpLib.bat  drv.bat  drv_debug.bat  fdl.bat  fdl_debug.bat  fota.bat  fota_debug.bat  gui.bat  gui_debug.bat  isp.bat  isp_debug.bat  link.bat  link_debug.bat  (+41 more)
BASE/ReleaseNotes/: PS_Release_notes.xlsx
JEE/: LICENSE
JEE/include/: jee_def.h
MS_Customize/: UWS6121E_normal.scf  UWS6121E_uws6121e_openphone_vm.scf
chip_drv/chip_plf/: chip_drv_config.h  chip_drv_config_extern.h
common/nv_parameters/: Non-Volatile ParameterÅäÖÃ¼°·¢²¼¹æ·¶.doc
common/source/: common_win.dsp  main.c
fdl_bootloader/bootloader/: scatter.scf  scatter0.scf  scatter1.scf
fdl_bootloader/fdl1/: fdl1_sc6800h.scf  fdl1_sc8800g.scf  fdl1_sc8800h.scf
fdl_bootloader/fdl2/: fdl2_sc6800h.scf  fdl2_sc8800g.scf  fdl2_sc8800h.scf
fdl_bootloader/nor_fdl1/: nor_fdl1_sc6531efm.scf  nor_fdl1_uix8910.scf  nor_fdl1_uws6121e.scf
halo_rec/: Makefile  efuse_rec.mk
halo_rec/algorithm/: make.srcs  pk1.c  rsa.c  rsa_sprd.c  rsa_sprd.h  sha1_32.c  sha1_32.h
halo_rec/keys/: _ap_key2019118123054.h  _cp_key2019118123054.h  ap_key.h  cp_key.h  license_key.h
halo_rec/system_hal/: halo_dummy.c  system_hal.h  system_mocor.h  system_osi.h
halo_rec/test/: alloc-testing.c  alloc-testing.h  framework.c  framework.h  make.srcs  test-algorithm.c  test-alloc-testing.c  test-apcp-process.c  test-diagcmd.c  test-main.c
lib/UWS6121E_WC_1H00_NoGNSS/: agc_exp.lib  amr_arm.lib  atwin.lib  aud_algorithm.lib  aud_common.lib  aud_config.lib  aud_dev.lib  audioservice.lib  caf_templete.lib  chip_drv.lib  clone_codec.lib  custom_tone.lib  dc.lib  display.lib  dsp_codec.lib  dtmf_tone.lib  dv.lib  dv_cfg.lib  eq_exp.lib  generic_tone.lib  gui_main.lib  gzip.lib  h264_codec.lib  img_proc_core.lib  isp_service.lib  lcd.lib  midi.lib  mmi_service.lib  mmk_main.lib  mmk_sys_main.lib  mp3_new.lib  ratecontrol.lib  record.lib  refbase.lib  s3d.lib  sfs.lib  spml_main.lib  sprd_macro.txt  transsamplerate.lib  ual.lib  (+10 more)
lib/UWS6121E_WC_1H00_NoGNSS_USER/: agc_exp.lib  amr_arm.lib  atwin.lib  aud_algorithm.lib  aud_common.lib  aud_config.lib  aud_dev.lib  audioservice.lib  caf_templete.lib  chip_drv.lib  clone_codec.lib  custom_tone.lib  dc.lib  display.lib  dsp_codec.lib  dtmf_tone.lib  dv.lib  dv_cfg.lib  eq_exp.lib  generic_tone.lib  gui_main.lib  gzip.lib  h264_codec.lib  img_proc_core.lib  lcd.lib  midi.lib  mmi_service.lib  mmk_main.lib  mmk_sys_main.lib  mp3_new.lib  ratecontrol.lib  record.lib  refbase.lib  s3d.lib  sfs.lib  spml_main.lib  sprd_macro.txt  transsamplerate.lib  ual.lib  ual_audioplayer.lib  (+9 more)
lib/UWS6121E_WC_1H00_NoGNSS_rel/: sprd_macro.txt
lib/simu/: agc_exp.lib  amr_arm.lib  aud_algorithm.lib  aud_common.lib  aud_config.lib  aud_dev.lib  audioservice.lib  caf_templete.lib  clone_codec.lib  custom_tone.lib  daps.lib  dc.lib  devps.lib  display.lib  dsp_codec.lib  dtmf_tone.lib  dv.lib  dv_cfg.lib  eq_exp.lib  generic_tone.lib  gzip.lib  h264_codec.lib  img_proc_core.lib  isp_service.lib  lcd.lib  midi.lib  mp3_new.lib  parser.lib  ratecontrol.lib  record.lib  refbase.lib  rtos.lib  s3d.lib  sfs.lib  spim.lib  spml_main.lib  sprd_macro.txt  tcpip.lib  transsamplerate.lib  voice.lib  (+2 more)
make/aac/: aac.mk
make/aac_lc/: aac_lc.mk
make/abup/: abup.mk
make/ad_output_adp/: ad_output_adp.mk
make/adaptor/: adaptor.mk
make/adups/: adups.mk
make/agc_exp/: agc_exp.mk
make/alimbedtls/: alimbedtls.mk
make/amr/: amr.mk
make/amr_arm/: amr_arm.mk
make/amr_dsp/: amr_dsp.mk
make/amr_vt/: amr_vt.mk
make/ap/: ap.mk
make/app/: app.mk  app_macro.mk  release_app_macro.mk
make/app_main/: app_macro.mk  app_main.mk  release_app_macro.mk
make/app_watch_main/: app_watch_macro.mk  app_watch_main.mk  release_app_watch_macro.mk
make/arm_ad_adp/: arm_ad_adp.mk
make/arm_tone/: arm_tone.mk
make/at_op/: at_op.mk
make/athr_iperf/: athr_iperf.mk
make/athr_supp/: athr_supp.mk
make/athr_wifi/: athr_wifi.mk
make/aud_algorithm/: aud_algorithm.mk
make/aud_common/: aud_common.mk
make/aud_config/: aud_config.mk
make/aud_dev/: aud_dev.mk
make/aud_dsp_mng/: aud_dsp_mng.mk
make/audioservice/: audioservice.mk
make/audproc_exp/: audproc_exp.mk
make/autotest_device/: autotest_device.mk
make/azan/: azan.mk
make/bootloader/: bootloader.mk
make/bsc/: bsc.mk
make/bsd/: bsd.mk
make/bt_pal/: bt_pal.mk
make/bt_pal_csr/: bt_pal_csr.mk
make/caf_interface/: caf_interface.mk
make/caf_templete/: caf_templete.mk
make/cat_mvoice/: cat_mvoice.mk
make/cdrom/: cdrom.mk
make/char_lib/: char_lib.mk
make/chip_drv/: chip_base.mk  chip_drv.mk
make/clone_codec/: clone_codec.mk
make/cmmb_fota/: cmmb_fota.mk
make/coap/: coap.mk
make/commlib/: commlib.mk
make/ctrl/: ctrl.mk
make/custom_drv/: ap_ext.mk  custom_drv.mk  gps.mk
make/custom_tone/: custom_tone.mk
make/daps/: daps.mk
make/dc/: dc.mk
make/dc_algorithm/: dc_algorithm.mk
make/demodal/: demodal.mk
make/device_info/: device_info.mk
make/diag_ex/: diag_ex.mk
make/digitalgain/: bsd.mk  digitalgain.mk
make/disk/: disk.mk
make/display/: display.mk
make/display_core/: display_core.mk
make/dmdsp/: dmdsp.mk
make/downlink_codec/: downlink_codec.mk
make/dra/: dra.mk
make/dsp/: dsp.mk
make/dsp_6600i/: dsp_6600i.mk
make/dsp_hr/: dsp_hr.mk
nes/: xnes_api.h  xnes_init.c  xnes_init.h
tcard_resource/: ËµÃ÷.txt
version/: UWS6121E_uws6121e_version.c  nv_config.h  version_common.c  version_log.h  version_software_ap.h  version_software_base.h  version_software_gps.h  version_software_gsm_base.h  version_software_mocor.h  version_software_zxf.h
(+11212 files in other folders)
